--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 
 node_js:
   - stable
+  - lts/erbium
   - lts/dubnium
   - lts/carbon
-  - lts/boron
 
 after_success:
   - npm install --global coveralls
